# shiseiProject

./: .gitignore  pyproject.toml
arita/: myTools.py  test.py
datascience/: learn1.py
forSubject/: leastSquareLearning.py
learnScikit-learn/: learn1.py
